feat: server project

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua" Version="1.5.371.3-beta" />
+  </ItemGroup>
+
 </Project>
